# design-patterns

./: .gitignore  README.md  pyproject.toml
creational_patterns/: README.md
creational_patterns/maze/: door.py  mapsite.py  maze.py  room.py  wall.py
