[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["Onur Cayci <onur.cayci@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
